# gtkmm-CI-Example

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dir_000004_000002.html  dir_000005_000000.html  dir_000006_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_3bf290e6f835fe1ddada5c6cb135bb2c.html  dir_3bf290e6f835fe1ddada5c6cb135bb2c_dep.map  dir_3bf290e6f835fe1ddada5c6cb135bb2c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_a36354df93aef5eec904487b77fa4fab.html  dir_a36354df93aef5eec904487b77fa4fab_dep.map  dir_a36354df93aef5eec904487b77fa4fab_dep.md5  dir_c3324685eb97e23bc5673e8240c1dd13.html  dir_d2e3a591115529d6c7ea42d7bff6acd1.html  files.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  math_8cpp.html  math_8cpp__incl.map  math_8cpp__incl.md5  math_8cpp_source.html  math_8h.html  math_8h__dep__incl.map  math_8h__dep__incl.md5  math_8h_source.html  math__test_8cpp.html  math__test_8cpp__incl.map  (+25 more)
.github/workflows/: doxygen.yml  function_test.yml
lib/math/: CMakeLists.txt
lib/math/include/math/: math.h
lib/math/src/: math.cpp
search/: all_2.js  all_4.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp  math_test.cpp
